# opengl_game_demo

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  build-glfw-full.sh  build.sh  hello.cpp
shaders/: shadows.frag  shadows.vert
sources/: camera.cpp  camera.h  camera.hpp  cube.cpp  cube.hpp  main.cpp  map.cpp  map.hpp  model.cpp  model.hpp  octahedron.cpp  octahedron.hpp  opengl.cpp  opengl.hpp  quad.cpp  quad.cpp.off  quad.hpp  shader.cpp  shader.hpp  shadow.cpp  shadow.hpp  texture.cpp  texture.hpp
